# connectome-tools

./: .gitignore  .gitlab-ci.yml  .gitreview  .pylintrc  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  default.nix  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish-sdist.yml  run-tox.yml
apps/: connectome-stats  connectome_stats.py  s2f-recipe  s2f_recipe.py
bluerecipe/: requirements.txt  setup.py
bluerecipe/apps/: connectome-stats  s2f-recipe
bluerecipe/bluerecipe/: __init__.py  bio_data.py  params.py  s2f.py  version.py
bluerecipe/bluerecipe/strategies/: __init__.py  estimate_bouton_reduction.py  estimate_individual_bouton_reduction.py  estimate_syns_con.py  experimental_syns_con.py  generalized_cv.py
bluerecipe/bluerecipe/tests/: test_estimate_bouton_reduction.py  test_estimate_individual_bouton_reduction.py
bluerecipe/examples/: hippocampus.yaml  sscx.yaml
connectome_tools/: __init__.py  dataset.py  equation.py  merge.py  stats.py  utils.py  version.py
connectome_tools/apps/: connectome_stats.py  s2f_recipe.py  s2f_recipe_merge.py
connectome_tools/data/default_config/: executor_config.yaml
connectome_tools/s2f_recipe/: __init__.py  add_constraints.py  estimate_bouton_reduction.py  estimate_individual_bouton_reduction.py  estimate_syns_con.py  existing_recipe.py  experimental_syns_con.py  generalized_cv.py  override_mtype.py  utils.py
connectome_tools/schemas/: executor_config.yaml  merge_config.yaml
doc/: Makefile
doc/source/: conf.py  datasets.rst  index.rst  tools.rst  troubleshooting.rst
examples/: hippocampus.yaml  sscx.yaml  thalamus_O1.yaml  thalamus_region.yaml
tests/: test_dataset.py  test_equation.py  test_estimate_bouton_reduction.py  test_estimate_individual_bouton_reduction.py  test_merge.py  test_s2f_recipe.py  test_stats.py  test_utils.py  utils.py
tests/apps/: test_connectome_stats.py  test_s2f_recipe.py  test_s2f_recipe_merge.py
tests/data/: bouton_density.tsv  executor_config.yaml  merge_config.yaml  nsyn_per_connection.tsv  s2f_config_1.yaml  s2f_config_1_with_constraints.yaml  s2f_recipe_1.xml  s2f_recipe_1_with_constraints.xml  s2f_recipe_2.xml  s2f_recipe_2_old.xml  s2f_recipe_3_duplicate_pathways.xml  s2f_recipe_4_mixed_formats.xml  s2f_recipe_5_with_region_constraint.xml  s2f_recipe_merged.xml  s2f_recipe_partial_1.xml  s2f_recipe_partial_2.xml
tests/s2f_recipe/: test_add_constraints.py  test_estimate_bouton_reduction.py  test_estimate_individual_bouton_reduction.py  test_estimate_syns_con.py  test_existing_recipe.py  test_experimental_syns_con.py  test_generalized_cv.py  test_override_mtype.py
(+5 files in other folders)
