[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "connectome-tools"
description = "Connectome statistics; S2F recipe generation"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    {name = "Blue Brain Project, EPFL", email = "bbp-ou-nse@groupes.epfl.ch"},
]
dependencies = [
    "click>=7.0,<9.0",
    "importlib-metadata",
    "importlib-resources",
    "joblib>=1.0.1",
    "jsonschema>=3.2.0,<5.0.0",
    "lxml>=3.3",
    "numpy>=1.9",
    "pandas>=1.0.0",
    "psutil>=5.7.2",
    "pyyaml>=5.3.1",
    "submitit>=1.4,<2.0",
    "bluepysnap<2.0",
    "morphio>=3.0.1,<4.0.0",
    "voxcell>=3.0,<4.0",
    # setuptools needed because of https://github.com/facebookincubator/submitit/issues/1765
    'setuptools;python_version>="3.12"',
]
license = {text = "Apache-2.0"}
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-bluebrain-theme",
]

[project.urls]
Homepage = "https://github.com/BlueBrain/connectome-tools"
Repository = "https://github.com/BlueBrain/connectome-tools.git"
Documentation = "https://connectome-tools.readthedocs.io"
Tracker = "https://github.com/BlueBrain/connectome-tools/issues"

[project.scripts]
connectome-stats = "connectome_tools.apps.connectome_stats:app"
s2f-recipe = "connectome_tools.apps.s2f_recipe:app"
s2f-recipe-merge = "connectome_tools.apps.s2f_recipe_merge:cli"

[tool.setuptools.packages.find]
include = ["connectome_tools"]

[tool.setuptools_scm]
version_file = "connectome_tools/_version.py"

[tool.black]
line-length = 100
target-version = [
    'py38',
    'py39',
    'py310',
    'py311',
    'py312',
    'py313',
]
include = 'connectome_tools\/.*\.py$|tests\/.*\.py$|doc\/source\/conf\.py$|setup\.py$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = [
  "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:nptyping",
]
